# lazybam

./: Cargo.toml  README.md  pyproject.toml
python/bampy/: __init__.py  _bampy.pyi  bampy.pyi
python/lazybam/: __init__.py  header.py  lazybam.pyi
python/tests/: test_all.py
src/: iterator.rs  lib.rs  merge_bams.rs  record.rs  record_buf.rs  record_override.rs  write.rs  write_bams.rs
tests/: test_read_bam.py  test_read_bam2.py  test_write_bam.py
tests/data/: test_reads.bam  test_reads_out.bam
