[package]
name = "bampy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "bampy"
crate-type = ["cdylib"]

[dependencies]
noodles = { version = "0.97.0", features = ["bam", "bgzf", "core", "sam"] }
numpy = "0.24.0"
pyo3 = "0.24.0"
